tests/backend/checkmach/fail3.output
File "fail3.ml", line 1:
Error: Annotation check for noalloc failed on function HIDE_NAME
